# win32apps

./: .lvimrc  README.md
000-wine-cn-fonts/: main.c  meson.build
01-hello/: hello.c  main.c  meson.build
010-hello/: hello.c  main.c  window.c
02-simpwin/: meson.build  simpwin.c  simpwin.h
03-menu/: menu.c  menu.h  meson.build
030-menu/: menu.rc
04-dialog/: dialog.c  dialog.h  dialog.rc  meson.build
05-bitmap/: bitmap.c  bitmap.h  bitmap.rc  meson.build
06-key/: key.c  meson.build
060-key/: key.c  key.h  key.rc
07-dialog/: dialog1.c  dialog2.c  dialog3.c  resource.h
070-dialog/: dialog3.c  meson.build  resource.rc
08-mouse/: mouse.h
080-mouse/: meson.build  mouse.c  mouse.rc
081-mypixel/: meson.build  mypixel.c  mypixel.h  mypixel.rc
082-pixelset/: meson.build  pixelset.c  pixelset.h  pixelset.rc
083-line/: line.c  line.h  line.rc  meson.build
084-curve/: curve.c  curve.h  curve.rc  meson.build
086-shape/: meson.build  shape.c  shape.h  shape.rc
087-font/: font.c  font.h  font.rc  meson.build
088-menu/: menu.c  menu.h  menu.rc  meson.build
09-timer/: timer.c
090-timer/: meson.build  timer.c  timer.h  timer.rc
10-scrllbar/: scrllbar.h  scrllbar.rc
100-scrllbar/: meson.build  scrllbar.c
11-listbox/: listbox.c  listbox.h  listbox.rc
110-listbox/: listbox.c  listbox.rc  meson.build
12-editbox/: editbox.rc  meson.build
120-editbox/: editbox.c  editbox.h
13-combobox/: combobox.c  combobox.rc  resource.h
130-combobox/: combobox.rc  meson.build  resource.h
14-statbar/: statbar.c  statbar.h  statbar.rc
140-statbar/: meson.build
15-mdi/: main.c  meson.build
150-mdi/: main.c  mdi.rc
16-multh/: meson.build  multh.c
160-multh/: multh.rc
cross/: zhcn_font.reg
windesk/: debug.c  debug.h  desktop.c  desktop.h  manifest.xml  meson.build  resource.h  resource.rc  utils.c  utils.h  version.h  version.h.in  version.rc  windesk.c  windesk.h
windesktop/: debug.c  debug.h  desktop.c  desktop.h  meson.build  resource.rc  utils.c  utils.h  windesk.c  windesk.h
